# linux-kernel-function-calls-network

./: README.md  compile_linux.sh  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: analyze_graph.py  build_callgraph.py  graph_maker.py
