[project]
name = "linux-complex-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clang>=21.1.7",
    "libclang>=18.1.1",
    "networkx>=3.6.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
